--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
+    },
+    "dependencies": {
+        "@mdi/font": "^7.3.67",
+        "roboto-fontface": "^0.10.0",
+        "vite-plugin-vuetify": "^1.0.2",
+        "vue-router": "^4.2.5",
+        "vuetify": "^3.3.22",
+        "webfontloader": "^1.6.28"
     }
 }
